// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Promo Code async validator handle error state gracefully where status is unknown 1`] = `
<React.Fragment>
  <Bold>
    Sent
  </Bold>
   
  Aug 09, 2019 at 12:30pm
   and test status unknown
</React.Fragment>
`;

exports[`Promo Code async validator should format completed test 1`] = `
<InlineItem
  compact={true}
>
  <span>
    <Bold>
      Sent
    </Bold>
     
    Aug 09, 2019 at 12:30pm
  </span>
  <span>
    <Bold>
      Completed
    </Bold>
     
    Aug 09, 2019 at 8:30pm
  </span>
</InlineItem>
`;

exports[`Promo Code async validator should format start time and hours left for running test 1`] = `
<React.Fragment>
  <Bold>
    Sent
  </Bold>
   
  Aug 09, 2019 at 12:30pm
   and 
  24
   hours remaining on test
</React.Fragment>
`;

exports[`Promo Code async validator should format stopped test 1`] = `
<InlineItem
  compact={true}
>
  <span>
    <Bold>
      Sent
    </Bold>
     
    Aug 09, 2019 at 12:30pm
  </span>
  <span>
    <Bold>
      Stopped
    </Bold>
     
    Aug 09, 2019 at 6:30pm
  </span>
</InlineItem>
`;
